PGCK-250 refactored DbObjType